# antid

./: .output.txt  Cargo.toml  EXAMPLES.md  README.md  SPECIFICATION.md  build.rs
proto/: archive.proto  pnr.proto  tarchive.proto
spec/: 00001_create_a_cli_app_that_generates_and_stores_antids_to_autonomi_network.txt  00003_change_specification_to_store_the_public_key_as_a_hex_string_instead_of_base64_encoded_bytes.txt
src/: main.rs
