[package]
name = "antid"
version = "0.1.1"
authors = ["Paul <paul@traktion.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
blsttc = "8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
tonic = "0.10"
prost = "0.12"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
base64 = "0.21"

[build-dependencies]
tonic-build = "0.10"
